# mitkapps

./: .gitignore  CMakeLists.txt  README.markdown  mitkapps-pope.files  mitkapps-pope.includes  mitkapps.files  mitkapps.includes
Apps/OrganPrintApp/: CMakeLists.txt  OrganPrintApp.cpp  target_libraries.cmake
Apps/POPEApp/: CMakeLists.txt  POPEApp.cpp  target_libraries.cmake
CMake/: CPackSetup.cmake
Classes/: MainWorkbenchWindowAdvisor.cpp  MainWorkbenchWindowAdvisor.h  PartListenerForPlugins.cpp  PartListenerForPlugins.h  PluginDescriptors.cpp  PluginDescriptors.h  ShowViewAction.cpp  ShowViewAction.h
Documentation/Doxygen/: Portal.dox
Modules/: CMakeLists.txt
Modules/Interactions/: CMakeLists.txt  DisplayCoordinateSupplier.cpp  DisplayCoordinateSupplier.h  MouseMoveSupplier.cpp  MouseMoveSupplier.h  files.cmake
Modules/OrganPrintLib/: CMakeLists.txt  files.cmake
Modules/PopeLib/: CMakeLists.txt  files.cmake
Modules/QTUploadFiles/: main.cpp  qtuploadfiles.cpp  qtuploadfiles.h  qtuploadfiles.qrc  qtuploadfiles.ui
Plugins/: Plugins.cmake
Plugins/inova.organprint.apps.app/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.organprint.apps.minimalapplication/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.organprint.editors.renderwindoweditor/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.organprint.views.sidepanel/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.organprint.views.stepselector/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.pacs.views.dicomview/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.popeproject.apps.mainapplication/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.popeproject.editors.renderwindow/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.popeproject.views.segmentation/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.popeproject.views.tools/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.popeproject.views.tools/documentation/UserManual/: Manual.dox
Plugins/inova.popeproject.views.tools/documentation/doxygen/: modules.dox
Plugins/inova.popeproject.views.tools/resources/: ToolsPlugin.qrc
Plugins/inova.popeproject.views.tools/src/internal/: ImageStatisticsCalculationThread.cpp  ImageStatisticsCalculationThread.h  TagTree.cpp  TagTree.h  ToolsPlugin.cpp  ToolsPlugin.h  ToolsPluginControls.ui  ToolsPluginPreferencePage.cpp  inova_popeproject_views_tools_PluginActivator.cpp  inova_popeproject_views_tools_PluginActivator.h
Plugins/inova.registration.views.comparison/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.frameregistration/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.manualregistration/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.mapper/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.registrationalgorithms/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.registrationalgorithms/documentation/UserManual/: Manual.dox
Plugins/inova.registration.views.registrationalgorithms/documentation/doxygen/: modules.dox
Plugins/inova.registration.views.registrationalgorithms/src/internal/: RegistrationAlgorithms.cpp  RegistrationAlgorithms.h  RegistrationAlgorithmsControls.ui  inova_registration_views_registrationalgorithms_Activator.cpp  inova_registration_views_registrationalgorithms_Activator.h
Plugins/inova.registration.views.rigidregistration/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.rigidregistration/documentation/UserManual/: Manual.dox
Plugins/inova.registration.views.rigidregistration/documentation/doxygen/: modules.dox
Plugins/inova.registration.views.rigidregistration/resources/: RegistrationIcon.xpm  RegistrationPlugin.qrc
Plugins/inova.registration.views.rigidregistration/src/internal/: ImageRegistrationCalculationThread.cpp  ImageRegistrationCalculationThread.h  RegistrationPlugin.cpp  RegistrationPlugin.h  RegistrationPluginControls.ui  RegistrationPluginPreferencePage.cpp  RegistrationPluginPreferencePage.h  inova_registration_views_rigidregistration_PluginActivator.cpp  inova_registration_views_rigidregistration_PluginActivator.h  nrnGlobals.h
Plugins/inova.registration.views.stepselector/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/inova.registration.views.visualizer/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/my.organprint.app/: CMakeLists.txt
Plugins/my.organprint.minimalapplication/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/my.organprint.views.stepselector/: CMakeLists.txt  files.cmake  plugin.xml
Plugins/my.organprint.views.stepselector/resources/: StepSelector.qrc  Styles.qss  step2.html
Plugins/my.organprint.views.stepselector/src/internal/: StepSelector.cpp  StepSelector.h  StepSelectorControls.ui  my_awesomeproject_stepselector_PluginActivator.cpp  my_awesomeproject_stepselector_PluginActivator.h
Plugins/my.pacs.views.dicomview/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/my.pacs.views.dicomview/src/: DicomViewDialog.cpp  DicomViewDialog.h
Plugins/my.pacs.views.dicomview/src/internal/: DicomView.cpp  DicomView.h  DicomViewConstants.h  DicomViewControls.ui  DicomViewDialog.cpp  DicomViewDialog.h  DicomViewPreferencePage.cpp  DicomViewPreferencePage.h  DicomViewPreferences.ui  UploadToPACSAction.cpp  UploadToPACSAction.h  WindowListener.cpp  WindowListener.h  my_pacs_views_dicomview_Activator.cpp  my_pacs_views_dicomview_Activator.h
(+326 files in other folders)
